--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "styled-components": "^5.3.3",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-logos": "^1.1.10",
+    "@iconify/react": "^3.1.0"
   }
 }
